[gd_scene load_steps=13 format=3 uid="uid://dnvud3lrgijm8"]

[ext_resource type="PackedScene" uid="uid://bx0eaye2jeufi" path="res://Player/player.tscn" id="1_jiire"]
[ext_resource type="Script" path="res://World/world.gd" id="1_o0pnk"]
[ext_resource type="Script" path="res://World/HighScoreLabel.gd" id="3_8ofjy"]
[ext_resource type="Script" path="res://World/ScoreLabel.gd" id="3_u3hoo"]
[ext_resource type="Script" path="res://World/GarbageCollector.gd" id="5_xhk1e"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_xp06p"]

[sub_resource type="PlaneMesh" id="PlaneMesh_cr2vm"]
size = Vector2(10, 10)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_18bmx"]
plane = Plane(1, 0, 0, -5)

[sub_resource type="PlaneMesh" id="PlaneMesh_yi4hs"]
size = Vector2(5, 10)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_e4vw8"]
plane = Plane(-1, 0, 0, -5)

[sub_resource type="BoxMesh" id="BoxMesh_ynydg"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vd45t"]
points = PackedVector3Array(0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5)

[node name="World" type="Node3D"]
script = ExtResource("1_o0pnk")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0.00133491, 5.40988, 10.225)

[node name="Player" parent="." instance=ExtResource("1_jiire")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="WallLighting" type="Node" parent="."]

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="WallLighting"]
transform = Transform3D(-0.965926, 1.54268e-08, -0.258819, 0, -1, -5.96047e-08, -0.258819, -5.75737e-08, 0.965926, -2.04872, 3.71803, -3.43495)
light_energy = 0.17
light_cull_mask = 2

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="WallLighting"]
transform = Transform3D(4.37114e-08, -3.82137e-15, -1, -8.74228e-08, -1, 0, -1, 8.74228e-08, -4.37114e-08, -2.04872, 3.71803, -3.43495)
visible = false
layers = 2
light_cull_mask = 2

[node name="PlayerLighting" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PlayerLighting"]
transform = Transform3D(1, 0, 0, 0, -0.741227, 0.671255, 0, -0.671255, -0.741227, -2.04872, 6, -3.43495)
light_energy = 0.6
light_cull_mask = 1
shadow_enabled = true

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="PlayerLighting"]
transform = Transform3D(-0.965926, 0.0128057, -0.258502, -9.64176e-10, -0.998775, -0.0494775, -0.258819, -0.0477916, 0.964743, -2.04872, 6, -3.43495)
light_energy = 0.423
light_cull_mask = 1

[node name="Environment" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0)

[node name="Ground" type="StaticBody3D" parent="Environment"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Ground"]
shape = SubResource("WorldBoundaryShape3D_xp06p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Ground"]
layers = 7
mesh = SubResource("PlaneMesh_cr2vm")
skeleton = NodePath("../..")

[node name="LeftWall" type="StaticBody3D" parent="Environment"]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/LeftWall"]
shape = SubResource("WorldBoundaryShape3D_18bmx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/LeftWall"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -5, 2.5, 0)
layers = 2
mesh = SubResource("PlaneMesh_yi4hs")

[node name="RightWall" type="StaticBody3D" parent="Environment"]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/RightWall"]
shape = SubResource("WorldBoundaryShape3D_e4vw8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/RightWall"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 5, 2.5, 0)
layers = 2
mesh = SubResource("PlaneMesh_yi4hs")
skeleton = NodePath("../../LeftWall")

[node name="Obstacles" type="Node" parent="."]

[node name="DeathMenu" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="MarginContainer" type="MarginContainer" parent="DeathMenu"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="PanelContainer" type="PanelContainer" parent="DeathMenu/MarginContainer"]
custom_minimum_size = Vector2(640, 360)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="DeathMenu/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="DeathMenu/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DeathMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "You Died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="DeathMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 1
script = ExtResource("3_8ofjy")
high_score_color = Color(0.909804, 0.501961, 0.207843, 1)

[node name="RestartButton" type="Button" parent="DeathMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="ScoreCounter" type="CanvasLayer" parent="."]
layer = -10

[node name="MarginContainer" type="MarginContainer" parent="ScoreCounter"]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/margin_top = 10

[node name="ScoreLabel" type="Label" parent="ScoreCounter/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/font_size = 48
text = "0"
script = ExtResource("3_u3hoo")

[node name="GarbageCollector" type="Area3D" parent="."]
script = ExtResource("5_xhk1e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="GarbageCollector"]
transform = Transform3D(12.7245, 0, 0, 0, 18.7779, 0, 0, 0, 1, 0, 0, 12)
mesh = SubResource("BoxMesh_ynydg")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GarbageCollector"]
transform = Transform3D(12.7245, 0, 0, 0, 18.7779, 0, 0, 0, 1, 0, 0, 12)
shape = SubResource("ConvexPolygonShape3D_vd45t")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="killed" from="Player" to="." method="_on_player_killed"]
[connection signal="killed" from="Player" to="DeathMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HighScoreLabel" method="_on_player_killed"]
[connection signal="scored" from="Player" to="." method="_on_player_scored"]
[connection signal="scored" from="Player" to="ScoreCounter/MarginContainer/ScoreLabel" method="_on_player_scored"]
[connection signal="pressed" from="DeathMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="area_exited" from="GarbageCollector" to="GarbageCollector" method="_on_area_exited"]
[connection signal="body_entered" from="GarbageCollector" to="GarbageCollector" method="_on_body_entered"]
